shelves endpoints fixed